tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_bound_checks_underflowing_u8/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: The value `-1` cannot fit into `u8` which has range `0..=255`
  ┌─ src/main.nr:3:25
  │
3 │             let _: u8 = -1;
  │                         --
  │

Aborting due to 1 previous error
